src/app/landing-page-gv/landing-page-gv.component.scss
@import "../../scss/global.scss";
.col-lg-7 {
    box-sizing: border-box;
    padding: 0 0 0 7%;
}

.product-description {
    display: flex;
    align-items: center;
    .description {
        h2 {
            color: #333;
            margin: 10px 0;
        }
        p {
            font-size: 17px;
            font-weight: lighter;
            color: #555;
            line-height: 28px;
        }
    }
    .logo-product {
        background-size: 80%;
        background-position: center center;
        background-repeat: no-repeat;
        min-height: 200px;
        &.gv {
            @at-root :host-context(.no-webp) #{&} {
                background-image: url('../../assets/products/gv/gv-logo.png');
            }
            @at-root :host-context(.webp) #{&} {
                background-image: url('../../assets/products/gv/gv-logo.png.webp');
            }
        }
    }
}

.product-steps {
    min-height: 200px;
    .container>.row {
        justify-content: space-between;
        align-items: center;
    }
    .product-image {
        @at-root :host-context(.no-webp) #{&} {
            background-image: url('../../assets/products/gv/product-step.jpeg');
        }
        @at-root :host-context(.webp) #{&} {
            background-image: url('../../assets/products/gv/product-step.jpg.webp');
        }
        min-height: 400px;
        position: relative;
        box-shadow: 0 0 3px #f3f3f3;
        border-radius: 5px;
        .round {
            position: absolute;
            right: -37.5px;
            top: 50%;
            margin-top: -37.5px;
            background-color: $primary-gv;
            @at-root :host-context(.no-webp) #{&} {
                background-image: url('../../assets/products/gv/gv-simple-logo.png');
            }
            @at-root :host-context(.webp) #{&} {
                background-image: url('../../assets/products/gv/gv-simple-logo.png.webp');
            }
        }
    }
    .product-steps-content {
        .row {
            margin: 13px 0;
            display: flex;
            align-items: center;
            &:nth-last-child(2) {
                margin-bottom: 20px;
            }
            .round {
                background-size: 45%;
            }
            &:nth-child(1) {
                .round {
                    @at-root :host-context(.no-webp) #{&} {
                        background-image: url('../../assets/products/gv/steps-icon-1.png');
                    }
                    @at-root :host-context(.webp) #{&} {
                        background-image: url('../../assets/products/gv/steps-icon-1.png.webp');
                    }
                }
            }
            &:nth-child(2) {
                .round {
                    @at-root :host-context(.no-webp) #{&} {
                        background-image: url('../../assets/products/gv/steps-icon-2.png');
                    }
                    @at-root :host-context(.webp) #{&} {
                        background-image: url('../../assets/products/gv/steps-icon-2.png.webp');
                    }
                }
            }
            &:nth-child(3) {
                .round {
                    @at-root :host-context(.no-webp) #{&} {
                        background-image: url('../../assets/products/gv/steps-icon-3.png');
                    }
                    @at-root :host-context(.webp) #{&} {
                        background-image: url('../../assets/products/gv/steps-icon-3.png.webp');
                    }
                }
            }
            &:nth-child(4) {
                .round {
                    @at-root :host-context(.no-webp) #{&} {
                        background-image: url('../../assets/products/gv/steps-icon-4.png');
                    }
                    @at-root :host-context(.webp) #{&} {
                        background-image: url('../../assets/products/gv/steps-icon-4.png.webp');
                    }
                }
            }
            &:nth-child(5) {
                .round {
                    @at-root :host-context(.no-webp) #{&} {
                        background-image: url('../../assets/products/gv/steps-icon-5.png');
                    }
                    @at-root :host-context(.webp) #{&} {
                        background-image: url('../../assets/products/gv/steps-icon-5.png.webp');
                    }
                }
            }
            &:nth-child(6) {
                .round {
                    @at-root :host-context(.no-webp) #{&} {
                        background-image: url('../../assets/products/gv/steps-icon-6.png');
                    }
                    @at-root :host-context(.webp) #{&} {
                        background-image: url('../../assets/products/gv/steps-icon-6.png.webp');
                    }
                }
            }
        }
    }
}

.faq {
    .container>.row {
        justify-content: space-between;
        align-items: center;
    }
    .faq-info {
        .col-sm-12 {
            margin: 25px 0;
        }
    }
    .faq-image {
        @at-root :host-context(.no-webp) #{&} {
            background-image: url('../../assets/products/gv/faq-image.jpg');
        }
        @at-root :host-context(.webp) #{&} {
            background-image: url('../../assets/products/gv/faq-image.jpg.webp');
        }
        min-height: 450px;
        position: relative;
        border-radius: 5px;
        .round {
            position: absolute;
            left: -37.5px;
            top: 50%;
            background-size: 65%;
            margin-top: -37.5px;
            background-color: $white;
            @at-root :host-context(.no-webp) #{&} {
                background-image: url('../../assets/products/gv/faq.png');
            }
            @at-root :host-context(.webp) #{&} {
                background-image: url('../../assets/products/gv/faq.png.webp');
            }
        }
    }
}
/* ... */

